clusters/dev/apps/backstage/infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  selector:
    app.kubernetes.io/name: backstage
  ports:
    - name: http
      port: 7007
      targetPort: http
