clusters/dev/apps/backstage/infra/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-http-redirect
  namespace: backstage
spec:
  parentRefs:
    - name: kiac
      namespace: kiac-gateway
      sectionName: http
  hostnames:
    - ${BACKSTAGE_HOSTNAME}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
